--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -282,18 +282,18 @@
   <string name="speak_fifth">Viides</string>
   <string name="speak_speed_title">Puhenopeus</string>
   <string name="conf_speak_synchronize">Synkronoi teksti puheen kanssa</string>
-  <string name="conf_speak">Puhu</string>
+  <string name="speak_and_play_earcons_title">Puhu</string>
   <string name="conf_replace_divinename">Korvaa tetragrammi (Herra) sanalla Jahve</string>
   <string name="conf_change_chapter">Luvun vaihtuminen</string>
   <string name="conf_change_title">Otsikot</string>
   <string name="notification_channel_tts_status">Puhesyntetisoinnin tila</string>
-  <string name="conf_sleep_timer">Aseta uniajastin</string>
+  <string name="conf_speak_sleep_timer">Aseta uniajastin</string>
   <string name="sleep_timer_title">Uniajastimen aika minuuteissa</string>
-  <string name="sleep_timer_timer_set">Aseta uniajastin. Ajastin asetettu: %d minuuttia</string>
-  <string name="conf_playback_settings">Puheen asetukset</string>
-  <string name="conf_speak_settings">Yleiset puheen asetukset</string>
+  <string name="sleep_timer_set">Aseta uniajastin. Ajastin asetettu: %d minuuttia</string>
+  <string name="playback_settings_title">Puheen asetukset</string>
+  <string name="speak_settings_title">Yleiset puheen asetukset</string>
   <string name="sleep_timer_started">Uniajastin aloitettu, %d minuuttia</string>
-  <string name="conf_speak_bookmarking_settings">Kirjanmerkkien asetukset</string>
+  <string name="speak_bookmarking_settings_title">Kirjanmerkkien asetukset</string>
   <string name="speak_next">Seuraava</string>
   <string name="speak_previous">Edellinen</string>
   <string name="widget_toggle_sleep_timer">Kytke uniajastin</string>
@@ -314,7 +314,7 @@
 
   <string name="add_widget">Lisää widget</string>
   <string name="download_documents">Ladataan dokumentteja</string>
-  <string name="bookmarkwidget_helptext">Puheen kirjanmerkkien pikapainikkeet tulevat tähän</string>
+  <string name="widget_bookmark_helptext">Puheen kirjanmerkkien pikapainikkeet tulevat tähän</string>
   <string name="sleep_timer_active_at">Uniajastin: %s minuuttia jäljellä.</string>
   <string name="speak_status_stopped">- pysäytetty -</string>
   <string name="notification_channel_progress_status">Taustaprosessien tilan ilmoitukset dokumenttien latauksille jne.</string>
