--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -284,7 +284,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="conf_change_title">Titles</string>
     <string name="conf_speak_footnotes">Footnotes</string>
     <string name="conf_speak_sleep_timer">Set sleep timer</string>
-    <string name="conf_speak_multitranslation">Speak from all windows</string>
+    <string name="conf_speak_multitranslation">Speak from all windows verse by verse</string>
 
     <string name="sleep_timer_title">Sleep time in minutes</string>
     <string name="sleep_timer_set">Set sleep timer. Timer set: %d minutes</string>
