Implement "More speak settings" activity to simplify main speak screen for bibles

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -275,6 +275,8 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="speak_settings_title">General speak settings</string>
     <string name="speak_bookmarking_settings_title">Bookmarking settings</string>
     <string name="speak_bookmarks_menu_title">Speak from bookmark</string>
+    <string name="speak_more_settings">More settings</string>
+    <string name="speak_settings_activity_title">More speak settings</string>
 
     <string name="conf_speak_synchronize">Synchronize text with speech</string>
     <string name="conf_speak_auto_bookmark">Automatic bookmarking</string>
@@ -403,5 +405,4 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="download_documents">Downloading documents</string>
     <string name="notification_channel_tts_status">Text to speech</string>
     <string name="notification_channel_progress_status">Progress status notification for document downloads etc.</string>
-    <string name="speak_settings_activity_title">Speak settings</string>
 </resources>
