--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -223,6 +223,65 @@
   <string name="tts_lang_not_available">Tätä kieltä ei voi käyttää.</string>
   <string name="speak_queue">Jono</string>
   <string name="speak_repeat">Toista</string>
+  <!--Speak - Bible-->
+  <string name="speak_speed_title">Puhenopeus</string>
+  <string name="speak_and_play_earcons_title">Puhu ja soita äänimerkit</string>
+  <string name="playback_settings_title">Soiton asetukset</string>
+  <string name="speak_settings_title">Yleiset puheen asetukset</string>
+  <string name="speak_bookmarking_settings_title">Kirjanmerkkien asetukset</string>
+  <string name="speak_bookmarks_menu_title">Aloita puhe kirjanmerkistä</string>
+  <string name="speak_more_settings">Lisää asetuksia</string>
+  <string name="speak_settings_activity_title">Lisää puheasetuksia</string>
+  <string name="speak_sleep_timer_title">Uniajastin</string>
+  <string name="speak_no_books_available">Ei ole kirjoja joita voisi puhua</string>
+  <string name="conf_speak_synchronize">Synkronoi teksti puheen kanssa</string>
+  <string name="conf_speak_auto_bookmark">Automaattiset kirjanmerkit</string>
+  <string name="conf_save_playback_settings_to_bookmarks">Tallenna soiton asetukset kirjanmerkkeihin</string>
+  <string name="conf_replace_divinename">Korvaa Jumalan nimi Jahvella</string>
+  <string name="conf_change_chapter">Kappaleen vaihdokset</string>
+  <string name="conf_change_title">Otsikot</string>
+  <string name="conf_speak_footnotes">Alaviitteet</string>
+  <string name="conf_speak_sleep_timer">Aseta uniajastin</string>
+  <string name="conf_speak_multitranslation">Vertaa käännöksiä puhumalla kaikista näkyvillä olevista ikkunoista</string>
+  <string name="sleep_timer_title">Uniajastimen ajastus minuuteissa</string>
+  <string name="sleep_timer_set">Aseta uniajastin. Ajastin asetettu: %d minuuttia</string>
+  <string name="sleep_timer_started">Uniajastus aloitettu, %d minuuttia</string>
+  <string name="sleep_timer_active_at">Uniajastin: %s minuuttia jäljellä.</string>
+  <string name="speak_next">Seuraava</string>
+  <string name="speak_previous">Edellinen</string>
+  <string name="widget_toggle_sleep_timer">Kytke uniajastin päälle</string>
+  <string name="widget_bookmark_helptext">Puheen kirjanmerkkien pikapainikkeet tulevat tähän.</string>
+  <string name="speak_status_stopped">pysäytetty</string>
+  <string name="speak_bookmark_help">Puheen kirjanmerkkien ohje</string>
+  <string name="speak_help_auto_bookmark">
+Puheen kirjanmerkki lisätään automaattisesti kun puhe on keskeytetty tai lopetettu. 
+Automaattisesti luodut kirjanmerkit merkitään erityiseen Puhe-kirjanmerkkiryhmään.
+Jos aloitat puheen kirjanmerkistä, kirjanmerkki siirtyy automaattisesti silloin kun puhe keskeytetään tai lopetetaan seuraavan kerran.
+Vain Puhe-kirjanmerkkiryhmän kirjanmerkit siirretään, muut kirjanmerkkiryhmät jätetään ennalleen.</string>
+  <string name="speak_help_playback_settings">
+Erityiset soiton asetukset (\"Soiton asetukset\"-otsikon alla Puhu-näkymässä)
+ovat talletetut Puhe-kirjanmerkkeihin kun tämä asetus on valittu. 
+Kun aloitat puheen Puhe-kirjanmerkistä, tallennetut soiton asetukset ladataan kirjanmerkistä.</string>
+  <string name="speak_help_playback_settings_example">
+Esimerkiksi jos kuuntelet 1. Mooseksen kirjaa ja Roomalaiskirjettä, ja
+haluat kuunnella 1. Mooseksenkirjaa nopeasti ilman lukujen vaihtumisten ilmoituksia,
+mutta Roomalaiskirjettä hitaammin siten että kuulet äänimerkin lukujen vaihtuessa,
+sinulla voi olla eri soiton asetukset näille kirjoille 
+kun nämä asetukset on talletettu niihin liittyviin kirjanmerkkeihin.</string>
+  <string-array name="divinename_original">
+    <item>Herraan</item>
+    <item>Herra</item>
+    <item>Jumala</item>
+    <item></item>
+    <item></item>
+  </string-array>
+  <string name="speak_book_changed">Kirja vaihtui.</string>
+  <string name="speak_chapter_changed">Luku</string>
+  <string name="speak_first">Ensimmäinen</string>
+  <string name="speak_second">Toinen</string>
+  <string name="speak_third">Kolmas</string>
+  <string name="speak_fourth">Neljäs</string>
+  <string name="speak_fifth">Viides</string>
   <!--User Notes-->
   <string name="mynotes">Omat kommentit</string>
   <string name="mynote">Oma kommentti</string>
@@ -271,51 +330,9 @@
   <string name="error_page_too_large">Sivu on liian suuri ladattavaksi</string>
   <string name="error_key_not_in_document">Ei löytynyt teoksesta</string>
   <string name="empty_list">Ei näytettävää</string>
-
-  <string name="speak_book_changed">Kirja vaihtui. </string>
-  <string name="speak_chapter_changed">Luku</string>
-
-  <string name="speak_first">Ensimmäinen</string>
-  <string name="speak_second">Toinen</string>
-  <string name="speak_third">Kolmas</string>
-  <string name="speak_fourth">Neljäs</string>
-  <string name="speak_fifth">Viides</string>
-  <string name="speak_speed_title">Puhenopeus</string>
-  <string name="conf_speak_synchronize">Synkronoi teksti puheen kanssa</string>
-  <string name="speak_and_play_earcons_title">Puhu</string>
-  <string name="conf_replace_divinename">Korvaa tetragrammi (Herra) sanalla Jahve</string>
-  <string name="conf_change_chapter">Luvun vaihtuminen</string>
-  <string name="conf_change_title">Otsikot</string>
-  <string name="notification_channel_tts_status">Puhesyntetisoinnin tila</string>
-  <string name="conf_speak_sleep_timer">Aseta uniajastin</string>
-  <string name="sleep_timer_title">Uniajastimen aika minuuteissa</string>
-  <string name="sleep_timer_set">Aseta uniajastin. Ajastin asetettu: %d minuuttia</string>
-  <string name="playback_settings_title">Puheen asetukset</string>
-  <string name="speak_settings_title">Yleiset puheen asetukset</string>
-  <string name="sleep_timer_started">Uniajastin aloitettu, %d minuuttia</string>
-  <string name="speak_bookmarking_settings_title">Kirjanmerkkien asetukset</string>
-  <string name="speak_next">Seuraava</string>
-  <string name="speak_previous">Edellinen</string>
-  <string name="widget_toggle_sleep_timer">Kytke uniajastin</string>
-  <string-array name="divinename_original">
-    <item>Herraan</item>
-    <item>Herra</item>
-    <item>Jumala</item>
-    <item/>
-    <item/>
-  </string-array>
-  <string-array name="divinename_replace">
-    <item>Jahveen</item>
-    <item>Jahve</item>
-    <item>Jahve</item>
-    <item/>
-    <item/>
-  </string-array>
-
-  <string name="add_widget">Lisää widget</string>
-  <string name="download_documents">Ladataan dokumentteja</string>
-  <string name="widget_bookmark_helptext">Puheen kirjanmerkkien pikapainikkeet tulevat tähän</string>
-  <string name="sleep_timer_active_at">Uniajastin: %s minuuttia jäljellä.</string>
-  <string name="speak_status_stopped">- pysäytetty -</string>
+  <string name="add_widget">Lisää widgetti</string>
+  <!--Notifications-->
+  <string name="download_documents">Dokumenttien lataaminen</string>
+  <string name="notification_channel_tts_status">Teksti puheeksi</string>
   <string name="notification_channel_progress_status">Taustaprosessien tilan ilmoitukset dokumenttien latauksille jne.</string>
 </resources>
