Add instructions for translators about divinename string arrays

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -325,6 +325,12 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
         when these settings are saved to the corresponding bookmarks.
     </string>
 
+    <!-- List of (max 5) words that will be searched and replaced by their counterpart in divinename_replace
+         if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language.
+         -->
     <string-array name="divinename_original">
         <item>Lord</item>
         <item>God</item>
@@ -332,6 +338,10 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
         <item/>
         <item/>
     </string-array>
+    <!-- List of (max 5) words that we will replace those words listed in divinename_original.
+
+         Please note that this is not translation but you need to think about what words need to be replaced
+         in your language. -->
     <string-array name="divinename_replace">
         <item>Yahweh</item>
         <item>Yahweh</item>
