Add instructions for translators about divinename string arrays

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -329,8 +329,8 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
          if they are found in <divineName> tag in the document (i.e. LORD etc, in capital letters).
 
          Please note that this is not translation but you need to think about what words need to be replaced
-         in your language.
-         -->
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings. -->
     <string-array name="divinename_original">
         <item>Lord</item>
         <item>God</item>
@@ -341,7 +341,8 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <!-- List of (max 5) words that we will replace those words listed in divinename_original.
 
          Please note that this is not translation but you need to think about what words need to be replaced
-         in your language. -->
+         in your language. These will be used if "Replace divinename with Yahweh" feature is enabled
+         in speak settings. -->
     <string-array name="divinename_replace">
         <item>Yahweh</item>
         <item>Yahweh</item>
